--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\bsamu\AppData\Local\Temp\testng-eclipse-1998449821\testng-customsuite.xml</span>
+                    <span>C:\Users\bsamu\AppData\Local\Temp\testng-eclipse-1237138943\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptns.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;search for the product&quot;, &quot;Search and place the order for Products&quot;)">runScenario("search for the product", "Search and place the order for Products")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,12 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptns.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Order the parameterized product and validate&quot;, &quot;Order Product&quot;)">runScenario("Order the parameterized product and validate", "Order Product")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptns.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;search for the product&quot;, &quot;Search and place the order for Products&quot;)">runScenario("search for the product", "Search and place the order for Products")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="cucumberOptns.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;search for the product&quot;, &quot;Search and place the order for Products&quot;)">runScenario("search for the product", "Search and place the order for Products")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="cucumberOptns.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Order the parameterized product and validate&quot;, &quot;Order Product&quot;)">runScenario("Order the parameterized product and validate", "Order Product")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,9 +128,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">cucumberOptns.TestNGTestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -149,29 +140,20 @@
                   </a> <!-- runScenario("search for the product", "Search and place the order for Products") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("search for the product","Search and place the order for Products")</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [No data] but found [Beetroot]
-	at org.testng.Assert.fail(Assert.java:110)
-	at org.testng.Assert.failNotEquals(Assert.java:1577)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:149)
-	at org.testng.Assert.assertEquals(Assert.java:131)
-	at org.testng.Assert.assertEquals(Assert.java:655)
-	at org.testng.Assert.assertEquals(Assert.java:665)
-	at stepDefinitions.OffersPageStepDefinitions.validate_this_product_name_in_offers_page_matches_with_Landing_page(OffersPageStepDefinitions.java:63)
-	at ✽.Validate this product name in offers page matches with Landing page(file:///C:/Users/bsamu/EclipseCucumber/CucumberAutomation/src/test/java/features/searchProduct.feature:8)
-
-</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">cucumberOptns.TestNGTestRunner</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;search for the product&quot;, &quot;Search and place the order for Products&quot;)">
+                  </a> <!-- runScenario("search for the product", "Search and place the order for Products") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("search for the product","Search and place the order for Products")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="runScenario(&quot;Order the parameterized product and validate&quot;, &quot;Order Product&quot;)">
@@ -182,22 +164,12 @@
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;search for the product&quot;, &quot;Search and place the order for Products&quot;)">
-                  </a> <!-- runScenario("search for the product", "Search and place the order for Products") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("search for the product","Search and place the order for Products")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bsamu\AppData\Local\Temp\testng-eclipse-1998449821\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bsamu\AppData\Local\Temp\testng-eclipse-1237138943\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -258,20 +230,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'cucumberOptns.TestNGTestRunner')
-data.setCell(0, 3, 11246);
+data.setCell(0, 3, 13505);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'cucumberOptns.TestNGTestRunner')
-data.setCell(1, 3, 11216);
+data.setCell(1, 3, 13490);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'cucumberOptns.TestNGTestRunner')
-data.setCell(2, 3, 10969);
+data.setCell(2, 3, 13445);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 33 seconds</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -299,26 +271,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">cucumberOptns.TestNGTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@61a1ea2c)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@4867ab9f)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">runScenario("search for the product", "Search and place the order for Products")</span>
+                <span class="method-start">917 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("search for the product", "Search and place the order for Products")</span>
+                <span class="method-start">917 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">runScenario("Order the parameterized product and validate", "Order Product")</span>
-                <span class="method-start">753 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">runScenario("search for the product", "Search and place the order for Products")</span>
-                <span class="method-start">753 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("search for the product", "Search and place the order for Products")</span>
-                <span class="method-start">753 ms</span>
+                <span class="method-start">917 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">12004 ms</span>
+                <span class="method-start">14424 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
